--- a/BookingForYourTravel/sass/main.css
+++ b/BookingForYourTravel/sass/main.css
@@ -18,6 +18,8 @@
   --color_white:#FFF;
   --color_black:#000;
   --shadow_dark:0 2rem 6rem rgba(0, 0, 0, .3);
+  --shadow_light:0 2rem 5rem rgba(0, 0, 0, .06);
+  --line:1px solid var(--color_gray_light_2);
 }
 
 * {
@@ -128,6 +130,7 @@ body {
   /* background-color:greenyellow; */
   -ms-flex-item-align: stretch;
       align-self: stretch;
+  /* 교차축 방향으로 플렉스 아이템 개별 배치 */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,6 +193,391 @@ body {
   margin-right: 1rem;
 }
 
+/* side_nav */
+.side_nav {
+  font-size: 1.4rem;
+  list-style: none;
+  margin-top: 3.5rem;
+}
+
+.side_nav__item {
+  position: relative;
+}
+
+.side_nav__item:not(:last-child) {
+  margin-bottom: .5rem;
+}
+
+.side_nav__item::before {
+  background-color: var(--color_primary);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 3px;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  -webkit-transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
+  transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
+  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
+}
+
+.side_nav__item:hover::before, .side_nav__item__active::before {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
+  width: 100%;
+}
+
+.side_nav__item__active::before {
+  background-color: var(--color_primary_light);
+}
+
+.side_nav__link:link, .side_nav__link:visited {
+  color: var(--color_gray_light_1);
+  text-decoration: none;
+  text-transform: uppercase;
+  display: block;
+  padding: 1.5rem 3rem;
+  position: relative;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.side_nav__link:hover {
+  /*color:orangered;*/
+}
+
+.side_nav__icon {
+  width: 1.75rem;
+  height: 1.75rem;
+  margin-right: 2rem;
+  fill: currentColor;
+}
+
+/* legal */
+.legal {
+  font-size: 1.2rem;
+  color: val(--color_gray_light_4);
+  text-align: center;
+  padding: 2.5rem;
+}
+
+/* gallery */
+.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.gallery__photo {
+  width: 100%;
+  display: block;
+}
+
+/* overview */
+.overview {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-bottom: var(--line);
+}
+
+.overview__heading {
+  font-size: 2.25rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 1.5rem 3rem;
+}
+
+.overview__stars {
+  /*
+        background-color:orangered;
+        flex:1;
+        */
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  /* align-items 별 정렬 정확하게 가운데 하려고 */
+}
+
+.overview__icon_star, .overview__icon_location {
+  width: 1.75rem;
+  height: 1.75rem;
+  fill: var(--color_primary);
+}
+
+.overview__location {
+  font-size: 1.2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.overview__icon_location {
+  margin-right: .5rem;
+}
+
+.overview__rating {
+  background-color: var(--color_primary);
+  margin-left: 3rem;
+  padding: 0 2.25rem;
+  color: var(--color_white);
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.overview__rating_average {
+  font-size: 2.25rem;
+  font-weight: 300;
+  margin-bottom: -5px;
+}
+
+.overview__rating_count {
+  font-size: .8rem;
+}
+
+/* btn_inline */
+.btn_inline {
+  background-color: transparent;
+  border: none;
+  color: var(--color_primary);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.btn_inline span {
+  margin-left: 3px;
+  -webkit-transition: margin-left .2s;
+  transition: margin-left .2s;
+}
+
+.btn_inline:hover {
+  color: var(--color_gray_dark_1);
+}
+
+.btn_inline:hover span {
+  margin-left: 8px;
+}
+
+.btn_inline:focus {
+  outline: none;
+  -webkit-animation: pulsate 1s infinite;
+          animation: pulsate 1s infinite;
+}
+
+@-webkit-keyframes pulsate {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  50% {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    -webkit-box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+            box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+}
+
+@keyframes pulsate {
+  0% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+  50% {
+    -webkit-transform: scale(1.05);
+            transform: scale(1.05);
+    -webkit-box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+            box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-box-shadow: none;
+            box-shadow: none;
+  }
+}
+
+/* paragraph */
+.paragraph:not(:last-of-type) {
+  /* :last-of-type은 같은 타입 요소만 */
+  margin-bottom: 2rem;
+}
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.list__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  margin-bottom: .7rem;
+}
+
+.list__item::before {
+  content: "";
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  margin-right: .7rem;
+  /*
+        // 구 버전 브라우저
+        background-image:url(../img/chevron-thin-right.svg);
+        background-size:cover;
+        */
+  background-color: var(--color_primary);
+  -webkit-mask-image: url(../img/chevron-thin-right.svg);
+  -webkit-mask-size: cover;
+  mask-image: url(../img/chevron-thin-right.svg);
+  mask-size: cover;
+}
+
+.recommand {
+  font-size: 1.3rem;
+  color: var(--color_gray_dark_3);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.recommand__count {
+  margin-right: auto;
+}
+
+.recommand__photo {
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  border: 3px solid var(--color_white);
+}
+
+.recommand__photo:not(:last-child) {
+  margin-right: -1.5rem;
+}
+
+/* paragraph */
+.review {
+  background-color: var(--color_white);
+  -webkit-box-shadow: var(--shadow_light);
+          box-shadow: var(--shadow_light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+}
+
+.review::before {
+  content: "\201C";
+  position: absolute;
+  top: -2.75rem;
+  left: -1rem;
+  line-height: 1;
+  font-size: 20rem;
+  color: var(--color_gray_light_2);
+  font-weight: sans-serif;
+  z-index: 1;
+  overflow: hidden;
+}
+
+.review__text {
+  margin-bottom: 2rem;
+  position: relative;
+  z-index: 10;
+}
+
+.review__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review__user_box {
+  margin-right: auto;
+}
+
+.review__user_name {
+  font-size: 1.3rem;
+  font-weight: 600;
+  margin-bottom: .4rem;
+}
+
+.review__user_date {
+  font-size: 1rem;
+  color: var(--color_gray_dark_3);
+}
+
+.review__photo {
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+}
+
+.review__rating {
+  color: var(--color_primary);
+  font-size: 2.2rem;
+  font-weight: 300;
+}
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -203,7 +591,7 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: var(--color_white);
-  border-bottom: var(--color_gray_light_2);
+  border-bottom: var(--line);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -226,14 +614,63 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 18%;
           flex: 0 0 18%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .hotel_view {
-  background-color: orangered;
-  /* var(--color_white) */
+  background-color: var(--color_white);
+  /* orangered */
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   /* 1은 100 - 18%값 */
+}
+
+.detail {
+  font-size: 1.4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color_gray_light_1);
+  border-bottom: var(--line);
+}
+
+.description {
+  background-color: var(--color_white);
+  -webkit-box-shadow: var(--shadow_light);
+          box-shadow: var(--shadow_light);
+  padding: 3rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 60%;
+          flex: 0 0 60%;
+  margin-right: 4.5rem;
+  font-size: 1.4rem;
+}
+
+.user_reviews {
+  /*background-color:var(--color_white);*/
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 /*# sourceMappingURL=main.css.map */
