--- a/BookingForYourTravel/sass/_components.scss
+++ b/BookingForYourTravel/sass/_components.scss
@@ -63,7 +63,7 @@
 /* user_nav */
 .user_nav {
     /* background-color:greenyellow; */
-    align-self:stretch;
+    align-self:stretch; /* 교차축 방향으로 플렉스 아이템 개별 배치 */
 
     display:flex;
     align-items:center;
@@ -113,5 +113,332 @@
             border-radius:50%;
             margin-right:1rem;
         }
+    }
+}
+
+////////////////////////////
+/* side_nav */
+.side_nav {
+    font-size:1.4rem;
+    list-style:none;
+    margin-top:3.5rem;
+
+    &__item {
+        position:relative;
+
+        &:not(:last-child) {
+            margin-bottom:.5rem;
+        }
+    }
+
+    &__item::before {
+        background-color:var(--color_primary);
+        content:"";
+        position:absolute;
+        top:0;
+        left:0;
+        height:100%;
+        width:3px;
+        transform:scaleY(0);
+        transition:transform .2s, 
+                   width .4s cubic-bezier(1, 0, 0, 1) .2s, 
+                   background-color .1s;
+    }
+
+    &__item:hover::before,
+    &__item__active::before {
+        transform:scaleY(1);
+        width:100%;
+    }
+
+    &__item__active::before {
+        background-color:var(--color_primary_light);
+    }
+
+    &__link:link,
+    &__link:visited, {
+        color:var(--color_gray_light_1);
+        text-decoration:none;
+        text-transform:uppercase;
+        display:block;
+        padding:1.5rem 3rem;
+        position:relative;
+        z-index:10;
+
+        display:flex;
+        align-items:center;
+    }
+
+    &__link:hover {
+        /*color:orangered;*/
+    }
+
+    &__icon {
+        width:1.75rem;
+        height:1.75rem;
+        margin-right:2rem;
+        fill:currentColor;
+    }
+}
+
+/* legal */
+.legal {
+    font-size:1.2rem;
+    color:val(--color_gray_light_4);
+    text-align:center;
+    padding:2.5rem;
+}
+
+
+////////////////////////////
+/* gallery */
+.gallery {
+    display:flex;
+
+    &__photo {
+        width:100%;
+        display:block;
+    }
+}
+
+/* overview */
+.overview {
+    display:flex;
+    align-items:center;
+    border-bottom:var(--line);
+
+    &__heading {
+        font-size:2.25rem;
+        font-weight:300;
+        text-transform:uppercase;
+        letter-spacing:1px;
+        padding:1.5rem 3rem;
+    }
+
+    &__stars {
+        /*
+        background-color:orangered;
+        flex:1;
+        */
+        margin-right:auto;
+        display:flex; /* align-items 별 정렬 정확하게 가운데 하려고 */
+    }
+
+    &__icon_star, 
+    &__icon_location {
+        width:1.75rem;
+        height:1.75rem;
+        fill:var(--color_primary);
+    }
+
+    &__location {
+        font-size:1.2rem;
+        display:flex;
+        align-items:center;
+    }
+
+    &__icon_location {
+        margin-right:.5rem;
+    }
+
+    &__rating {
+        background-color:var(--color_primary);
+        margin-left:3rem;
+        padding:0 2.25rem;
+        color:var(--color_white);
+        align-self:stretch;
+
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        align-items:center;
+        
+        &_average {
+            font-size:2.25rem;
+            font-weight:300;
+            margin-bottom:-5px;
+        }
+
+        &_count {
+            font-size:.8rem;
+        }
+    }
+}
+
+////////////////////////////
+/* btn_inline */
+.btn_inline {
+    background-color:transparent;
+    border:none;
+    color:var(--color_primary);
+    font-size:inherit;
+    border-bottom:1px solid currentColor;
+    padding-bottom:2px;
+    display:inline-block;
+    cursor:pointer;
+    transition:all .2s;
+
+    & span {
+        margin-left:3px;
+        transition: margin-left .2s;
+    }
+
+    &:hover {
+        color:var(--color_gray_dark_1);
+
+        span {
+            margin-left:8px;
+        }
+    }
+
+    &:focus {
+        outline:none;
+        animation:pulsate 1s infinite;
+    }
+}
+
+@keyframes pulsate {
+    0% {
+        transform:scale(1);
+        box-shadow:none;
+    }
+
+    50% {
+        transform:scale(1.05);
+        box-shadow:0 1rem 4rem rgba(0, 0, 0, .25);
+    }
+
+    100% {
+        transform:scale(1);
+        box-shadow:none;
+    }
+}
+
+////////////////////////////
+/* paragraph */
+.paragraph:not(:last-of-type) { /* :last-of-type은 같은 타입 요소만 */
+    margin-bottom:2rem;
+}
+
+.list {
+    list-style:none;
+    margin:3rem 0;
+    padding:3rem 0;
+    border-top:var(--line);
+    border-bottom:var(--line);
+
+    display:flex;
+    flex-wrap:wrap;
+
+    &__item {
+        flex:0 0 50%;
+        margin-bottom:.7rem;
+    }
+
+    &__item::before {
+        content:"";
+        display:inline-block;
+        width:1rem;
+        height:1rem;
+        margin-right:.7rem;
+
+        /*
+        // 구 버전 브라우저
+        background-image:url(../img/chevron-thin-right.svg);
+        background-size:cover;
+        */
+
+        // 신 버전 브라우저
+        background-color:var(--color_primary);
+        -webkit-mask-image: url(../img/chevron-thin-right.svg);
+        -webkit-mask-size:cover;
+        mask-image: url(../img/chevron-thin-right.svg);
+        mask-size:cover;
+    }
+}
+
+.recommand {
+    font-size:1.3rem;
+    color:var(--color_gray_dark_3);
+
+    display:flex;
+    align-items:center;
+
+    &__count {
+        margin-right:auto;
+    }
+
+    &__photo {
+        box-sizing:content-box;
+        width:4rem;
+        height:4rem;
+        border-radius:50%;
+        border:3px solid var(--color_white);
+
+        &:not(:last-child) {
+            margin-right:-1.5rem;
+        }
+    }
+}
+
+////////////////////////////
+/* paragraph */
+.review {
+    background-color:var(--color_white);
+    box-shadow:var(--shadow_light);
+    padding:3rem;
+    margin-bottom:3.5rem;
+    position:relative;
+
+    &::before {
+        content:"\201C";
+        position:absolute;
+        top:-2.75rem;
+        left:-1rem;
+        line-height:1;
+        font-size:20rem;
+        color:var(--color_gray_light_2);
+        font-weight:sans-serif;
+        z-index:1;
+        overflow:hidden;
+    }
+
+    &__text {
+        margin-bottom:2rem;
+        position:relative;
+        z-index:10;
+    }
+
+    &__user {
+        display:flex;
+        align-items:center;
+
+        &_box {
+            margin-right:auto;
+        }
+
+        &_name {
+            font-size:1.3rem;
+            font-weight:600;
+            margin-bottom:.4rem;
+        }
+
+        &_date {
+            font-size:1rem;
+            color:var(--color_gray_dark_3);
+        }
+    }
+
+    &__photo {
+        width:4.5rem;
+        height:4.5rem;
+        border-radius:50%;
+        margin-right:1.5rem;
+    }
+
+    &__rating {
+        color:var(--color_primary);
+        font-size:2.2rem;
+        font-weight:300;
     }
 }
