--- a/BookingForYourTravel/sass/_layout.scss
+++ b/BookingForYourTravel/sass/_layout.scss
@@ -11,7 +11,7 @@
     font-size:1.4rem;
     height:7rem;
     background-color:var(--color_white);
-    border-bottom:var(--color_gray_light_2);
+    border-bottom:var(--line);
 
     display:flex;
     justify-content:space-between; // 주축 방향으로 플렉스 아이템 배치
@@ -25,9 +25,42 @@
 .sidebar {
     background-color:var(--color_gray_dark_1);
     flex:0 0 18%;
+
+    display:flex;
+    flex-direction:column;
+    justify-content:space-between;
 }
 
 .hotel_view {
-    background-color:orangered; /* var(--color_white) */
+    background-color:var(--color_white); /* orangered */
+    // height:80rem;
+
     flex:1; /* 1은 100 - 18%값 */
+}
+
+.detail {
+    font-size:1.4rem;
+    display:flex;
+    padding:4.5rem;
+    background-color:var(--color_gray_light_1);
+    border-bottom:var(--line);
+}
+
+.description {
+    background-color:var(--color_white);
+    box-shadow:var(--shadow_light);
+    padding:3rem;
+    flex:0 0 60%;
+    margin-right:4.5rem;
+
+    font-size:1.4rem;
+}
+
+.user_reviews {
+    /*background-color:var(--color_white);*/
+    flex: 1;
+
+    display:flex;
+    flex-direction:column;
+    align-items:center;
 }
