--- a/BookingForYourTravel/sass/_base.scss
+++ b/BookingForYourTravel/sass/_base.scss
@@ -27,6 +27,12 @@
     --line:1px solid var(--color_gray_light_2); // 다른 var을 담을 수 있음
 }
 
+$bp_largest:75em; // 1200px
+$bp_large:68.75em; // 1100px
+$bp_medium:56.25em; // 900px
+$bp_small:37.5em; // 600px
+$bp_smallest:31.25em; // 500px
+
 * {
     margin:0;
     padding:0;
@@ -41,6 +47,10 @@
 html {
     box-sizing:border-box;
     font-size:62.5%; // 1rem = 10px
+
+    @media only screen and (max-width:$bp_large) {
+        font-size:50%;
+    }
 }
 
 body {
