--- a/BookingForYourTravel/sass/_components.scss
+++ b/BookingForYourTravel/sass/_components.scss
@@ -13,6 +13,12 @@
     justify-content:center;
     align-items:center;
 
+    @media only screen and (max-width:$bp_smallest) {
+        order:1;
+        flex:0 0 100%;
+        background-color:var(--color_gray_light_2);
+    }
+    
     &__input {
         font-family:inherit;
         font-size:inherit;
@@ -123,11 +129,24 @@
     list-style:none;
     margin-top:3.5rem;
 
+    @media only screen and (max-width:$bp_medium) {
+        display:flex;
+        margin-top:0;
+    }
+
     &__item {
         position:relative;
 
         &:not(:last-child) {
             margin-bottom:.5rem;
+
+            @media only screen and (max-width:$bp_medium) {
+                margin-bottom:0;
+            }
+        }
+
+        @media only screen and (max-width:$bp_medium) {
+            flex:1;
         }
     }
 
@@ -167,10 +186,16 @@
 
         display:flex;
         align-items:center;
-    }
 
-    &__link:hover {
-        /*color:orangered;*/
+        @media only screen and (max-width:$bp_medium) {
+            justify-content:center;
+            padding:2rem;
+        }
+
+        @media only screen and (max-width:$bp_small) {
+            flex-direction:column;
+            padding:1.5rem .5rem;
+        }
     }
 
     &__icon {
@@ -178,6 +203,13 @@
         height:1.75rem;
         margin-right:2rem;
         fill:currentColor;
+
+        @media only screen and (max-width:$bp_small) {
+            margin-right:0;
+            margin-bottom:7px;
+            width:1.5rem;
+            height:1.5rem;
+        }
     }
 }
 
@@ -187,6 +219,10 @@
     color:val(--color_gray_light_4);
     text-align:center;
     padding:2.5rem;
+
+    @media only screen and (max-width:$bp_medium) {
+        display:none;
+    }
 }
 
 
@@ -213,6 +249,11 @@
         text-transform:uppercase;
         letter-spacing:1px;
         padding:1.5rem 3rem;
+
+        @media only screen and (max-width:$bp_small) {
+            font-size:1.8rem;
+            padding:1.25rem 2rem;
+        }
     }
 
     &__stars {
@@ -252,15 +293,27 @@
         flex-direction:column;
         justify-content:center;
         align-items:center;
+
+        @media only screen and (max-width:$bp_small) {
+            padding:0 1.5rem;
+        }
         
         &_average {
             font-size:2.25rem;
             font-weight:300;
             margin-bottom:-5px;
+
+            @media only screen and (max-width:$bp_small) {
+                font-size:1.8rem;
+            }
         }
 
         &_count {
             font-size:.8rem;
+
+            @media only screen and (max-width:$bp_small) {
+                font-size:.5rem;
+            }
         }
     }
 }
@@ -342,18 +395,19 @@
         height:1rem;
         margin-right:.7rem;
 
-        /*
         // 구 버전 브라우저
         background-image:url(../img/chevron-thin-right.svg);
         background-size:cover;
-        */
 
         // 신 버전 브라우저
-        background-color:var(--color_primary);
-        -webkit-mask-image: url(../img/chevron-thin-right.svg);
-        -webkit-mask-size:cover;
-        mask-image: url(../img/chevron-thin-right.svg);
-        mask-size:cover;
+        @supports (-webkit-mask-image:url()) or (mask-image:url()) {
+            background-color:var(--color_primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size:cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size:cover;
+            background-image:none;
+        }
     }
 }
 
@@ -368,6 +422,10 @@
         margin-right:auto;
     }
 
+    &__friends {
+        display:flex;
+    }
+
     &__photo {
         box-sizing:content-box;
         width:4rem;
@@ -376,7 +434,7 @@
         border:3px solid var(--color_white);
 
         &:not(:last-child) {
-            margin-right:-1.5rem;
+            margin-right:-2rem;
         }
     }
 }
@@ -389,6 +447,12 @@
     padding:3rem;
     margin-bottom:3.5rem;
     position:relative;
+    overflow:hidden;
+
+    @media only screen and (max-width:$bp_medium) {
+        padding:2rem;
+        margin-bottom:3rem;
+    }
 
     &::before {
         content:"\201C";
@@ -400,7 +464,6 @@
         color:var(--color_gray_light_2);
         font-weight:sans-serif;
         z-index:1;
-        overflow:hidden;
     }
 
     &__text {
@@ -440,5 +503,69 @@
         color:var(--color_primary);
         font-size:2.2rem;
         font-weight:300;
+    }
+}
+
+////////////////////////////
+/* cta */
+.cta {
+    padding:3.5rem 0;
+    text-align:center;
+
+    @media only screen and (max-width:$bp_medium) {
+        padding:2.5rem 0;
+    }
+
+    &__book_now {
+        font-size:2rem;
+        font-weight:300;
+        margin-bottom:2.5rem;
+    }
+}
+
+.btn {
+    font-size:1.5rem;
+    font-weight:300;
+    border-radius:150px;
+    border:1px solid var(--color_white);
+    background-image:linear-gradient(to right, var(--color_primary_light), var(--color_primary_dark));
+    color:var(--color_white); /* orangered */
+    position:relative;
+    overflow:hidden;
+    cursor:pointer;
+
+    & > * {
+        width:100%;
+        height:100%;
+        display:inline-block;
+        transition:all .2s;
+    }
+
+    &__visible {
+        padding:2rem 7rem;
+    }
+
+    &__invisible {
+        padding:2rem 0;
+        position:absolute;
+        left:0;
+        top:-100%;
+    }
+
+    &:hover {
+        background-image:linear-gradient(to left, var(--color_primary_light), var(--color_primary_dark));
+    }
+
+    &:hover &__visible{
+        transform:translateY(100%);
+    }
+
+    &:hover &__invisible {
+        top:0;
+    }
+
+    &:focus {
+        outline:none;
+        animation:pulsate 1s infinite;
     }
 }
