--- a/BookingForYourTravel/sass/_layout.scss
+++ b/BookingForYourTravel/sass/_layout.scss
@@ -5,6 +5,12 @@
     box-shadow:var(--shadow_dark);
 
     min-height:50rem;
+
+    @media only screen and (max-width:$bp_largest) {
+        margin:0;
+        max-width:100%;
+        width:100%;
+    }
 }
 
 .header {
@@ -16,10 +22,21 @@
     display:flex;
     justify-content:space-between; // 주축 방향으로 플렉스 아이템 배치
     align-items:center; // 교차축 방향으로 플렉스 아이템 배치
+
+    @media only screen and (max-width:$bp_smallest) {
+        flex-wrap:wrap;
+        align-content:space-around; /* 여러 줄인 플렉스 타이템을 교차축 방향으로 다양하게 배치 */
+        height:10rem;
+    }
+    
 }
 
 .content {
     display:flex;
+
+    @media only screen and (max-width:$bp_medium) {
+        flex-direction:column;
+    }
 }
 
 .sidebar {
@@ -44,6 +61,14 @@
     padding:4.5rem;
     background-color:var(--color_gray_light_1);
     border-bottom:var(--line);
+
+    @media only screen and (max-width:$bp_medium) {
+        padding:3rem;
+    }
+
+    @media only screen and (max-width:$bp_small) {
+        flex-direction:column;
+    }
 }
 
 .description {
@@ -52,8 +77,17 @@
     padding:3rem;
     flex:0 0 60%;
     margin-right:4.5rem;
-
     font-size:1.4rem;
+
+    @media only screen and (max-width:$bp_medium) {
+        padding:2rem;
+        margin-right:3rem;
+    }
+
+    @media only screen and (max-width:$bp_small) {
+        margin-right:0;
+        margin-bottom:3rem;
+    }
 }
 
 .user_reviews {
